--- a/index.html
+++ b/index.html
@@ -100,53 +100,51 @@
         </section>
 
 
-        <section class="card primary">
+        <section class="card primary" id="inspiration">
             <header>
-                <h1>На фокус <i class="badge">2</i></h1>
-                <span class="lnr lnr-eye"></span>
+                <h1>24/7 Вдъхновение <i class="badge">2</i></h1>
+                <span class="lnr lnr-star"></span>
                 <!-- <i class="ti ti-speakerphone"></i> -->
             </header>
             <div class="scroll">
                 <ul class="unstyled split-border status">
-                    <li class="birthday">
-                        Днес Иван Иванов да почерпи! Честит рожден ден!
+                    <li class="star">
+                        Зорница Янкова Георгиева
                         <div class="apart">
-                            <small>Не се изисква реакция</small>
+                            <small>
+                                Отношение към колегите<br />
+                                Спазва поетите ангажименти/обещания към колегите.
+                            </small>
                             <time>днес</time>
                         </div>
                     </li>
-                    <li class="holiday">
-                        Отсъстващи колеги: Иван, Мария.
+                    <li class="star">
+                        Венелин Георгиев Минков
                         <div class="apart">
-                            <small>Не се изисква реакция</small>
-                            <time>днес</time>
+                            <small>
+                                Отношение към колегите<br />
+                                Спазва поетите ангажименти/обещания към колегите.
+                            </small>
+                            <time>преди 3 дни</time>
                         </div>
                     </li>
-                    <li class="warn">
-                        <a href="#">Анкета за нови служители.</a>
+                    <li class="star">
+                        Райко Стоименов Илиев
                         <div class="apart">
-                            <small>Срок за реакция</small>
-                            <time>20 юли</time>
+                            <small>
+                                Отношение към колегите<br />
+                                Спазва поетите ангажименти/обещания към колегите.
+                            </small>
+                            <time>преди 6 дни</time>
                         </div>
                     </li>
-                    <li class="error">
-                        <a href="#">Профилактични медицински прегледи.</a>
+                    <li class="star">
+                        Тодор Ангелов Милиев
                         <div class="apart">
-                            <small>Срок за реакция</small>
-                            <time>20 юли</time>
-                        </div>
-                    </li>
-                    <li class="info">
-                        <a href="#">Допълнителни социални придобивки.</a>
-                        <div class="apart">
-                            <small>Не се изисква реакция</small>
-                            <time>---</time>
-                        </div>
-                    </li>
-                    <li class="warn">
-                        <a href="#">Актуализирана процедура за отпуски.</a>
-                        <div class="apart">
-                            <small>Срок за реакция</small>
+                            <small>
+                                Отношение към колегите<br />
+                                Спазва поетите ангажименти/обещания към колегите.
+                            </small>
                             <time>20 юли</time>
                         </div>
                     </li>
@@ -155,37 +153,7 @@
         </section>
 
 
-        <section class="card secondary">
-            <header>
-                <h1>Събития<i class="badge">2</i></h1>
-                <span class="lnr lnr-calendar-full"></span>
-                <!-- <i class="ti ti-calendar-event"></i> -->
-            </header>
-            <div class="scroll">
-                <article class="news">
-                    <!-- <img src="news/news3.jpg" /> -->
-                    <div class="img">
-                        <div style="background-image: url(news/news3.jpg)"></div>
-                    </div>
-                    <div>
-                        <h1><a href="#">Турнир по петанг</a></h1>
-                        <time>1ви октомври</time>
-                        <p>
-                            Френско-българската търговска и индустриална камара отправи покана за участие в турнир по
-                            петанк, който ще се проведе на 10 юни (събота) в Докторска градина (зад Националната
-                            библиотека). В тази връзка имате възможност да сформирате отбор от 3ма човека + 1 резерва,
-                            който
-                            да представлява Нова Броудкастинг Груп на турнира. Право на участие ще имат първите записали
-                            се
-                        </p>
-                    </div>
-                </article>
-                <hr />
-                <div style="text-align: right;">
-                    <a href="#">Виж всички</a>
-                </div>
-            </div>
-        </section>
+
 
 
         <section class="card default">
@@ -257,40 +225,37 @@
         </section>
 
 
-        <section class="card default">
+        <section class="card secondary">
             <header>
-                <h1>Документи</h1>
-                <span class="lnr lnr-file-empty"></span>
-                <!-- <i class="ti ti-files"></i> -->
+                <h1>Събития<i class="badge">2</i></h1>
+                <span class="lnr lnr-calendar-full"></span>
+                <!-- <i class="ti ti-calendar-event"></i> -->
             </header>
             <div class="scroll">
-                <ul class="unstyled split-border">
-                    <li>
-                        <a href="#">Правилник за вътрешният ред</a><br />
-                        <small>
-                            <i class="ti ti-pdf"></i>
-                            Правилник
-                        </small>
-                    </li>
-                    <li>
-                        <a href="#">Заявление за ползване на платен годишен отпуск</a><br />
-                        <small>
-                            <i class="ti ti-txt"></i>
-                            Бланки
-                        </small>
-                    </li>
-                    <li>
-                        <a href="#">Процедура за заявяване на социални придобивки</a><br />
-                        <small>
-                            <i class="ti ti-txt"></i>
-                            Правилник
-                        </small>
-                    </li>
-                </ul>
+                <article class="news">
+                    <!-- <img src="news/news3.jpg" /> -->
+                    <div class="img">
+                        <div style="background-image: url(news/news3.jpg)"></div>
+                    </div>
+                    <div>
+                        <h1><a href="#">Турнир по петанг</a></h1>
+                        <time>1ви октомври</time>
+                        <p>
+                            Френско-българската търговска и индустриална камара отправи покана за участие в турнир по
+                            петанк, който ще се проведе на 10 юни (събота) в Докторска градина (зад Националната
+                            библиотека). В тази връзка имате възможност да сформирате отбор от 3ма човека + 1 резерва,
+                            който
+                            да представлява Нова Броудкастинг Груп на турнира. Право на участие ще имат първите записали
+                            се
+                        </p>
+                    </div>
+                </article>
+                <hr />
+                <div style="text-align: right;">
+                    <a href="#">Виж всички</a>
+                </div>
             </div>
         </section>
-
-
     </main>
 
     <footer class="apart primary" id="footer">
@@ -302,8 +267,6 @@
             © Copyright 2023 Gravital, All Rights Reserved.
         </small>
     </footer>
-
-
 
 </body>
 
