added responsive header

--- a/index.html
+++ b/index.html
@@ -17,12 +17,85 @@
     <link rel="stylesheet" href="news.css" />
     <link rel="stylesheet" href="badge.css" />
     <link rel="stylesheet" href="lists.css" />
+    <link rel="stylesheet" href="header.css" />
     <link rel="stylesheet" href="footer.css" />
     <link rel="stylesheet" href="layout.css" />
     <title>Гравитал - Начало</title>
 </head>
 
 <body>
+
+    <header id="header">
+        <img class="brand" src="https://nstatic.nova.bg/files/nova/images/nova-logo.svg" />
+        <nav class="nav" role="navigation">
+            <ul>
+                <li>
+                    <a href="#" aria-haspopup="true">
+                        <span class="lnr lnr-graduation-hat"></span>
+                        <span>Обучения</span>
+                    </a>
+                    <div class="submenu" aria-label="submenu">
+                        <a href="#">Текущи</a>
+                        <a href="#">Резултати</a>
+                        <a href="#">Библиотека</a>
+                        <a href="#">Документи</a>
+                    </div>
+                </li>
+                <li>
+                    <a href="#">
+                        <span class="lnr lnr-list"></span>
+                        <span>Оценка</span>
+                    </a>
+                    <div class="submenu" aria-label="submenu">
+                        <a href="#">Ценности</a>
+                        <a href="#">24/7 Обратна Връзка</a>
+                        <a href="#">Цели</a>
+                        <a href="#">Оценка</a>
+                    </div>
+                </li>
+                <li>
+                    <a href="#">
+                        <span class="lnr lnr-rocket"></span>
+                        <span>Развитие</span>
+                    </a>
+                    <div class="submenu" aria-label="submenu">
+                        <a href="#">Кариера</a>
+                        <a href="#">Менторска програма</a>
+                    </div>
+                </li>
+                <li>
+                    <a href="#">
+                        <span class="lnr lnr-bullhorn"></span>
+                        <span>Новини</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <span class="lnr lnr-leaf"></span>
+                        <span>Отсъствия</span>
+                    </a>
+                    <div class="submenu" aria-label="submenu">
+                        <a href="#">Моите отсъствия</a>
+                        <a href="#">Отсъствия на служители</a>
+                        <a href="#">Заявки за резолюция</a>
+                    </div>
+                </li>
+                <li>
+                    <a href="#">
+                        <span class="lnr lnr-cog"></span>
+                        <span>Управление</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        <div class="user">
+            <div>
+                Иван Иванов<br />
+                <small><a href="#">ivan.ivanov@looming.tech</a></small>
+            </div>
+            <img src="https://randomuser.me/api/portraits/men/81.jpg" alt="portrait" />
+        </div>
+    </header>
 
     <main id="main">
         <section class="card default" id="news">
