pinned/starred news

--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
                         <div style="background-image: url(news/news1.jpg)"></div>
                     </div>
                     <div>
-                        <h1><a href="#">Изживей магията на лятото с Coca-Cola на 22 юни</a></h1>
+                        <h1><a href="#">Изживей магията на лятото с Coca-Cola на 22 юни</a> <i class="badge">важно /
+                                pinned</i></h1>
                         <time>Преди 4 часа</time>
                         <small class="user">Иван Иванов</small>
                         <p>
@@ -125,6 +126,7 @@
                             него ще откриете <a
                                 href="https://thevoice.bg/novini/izzhivej-magijata-na-ljatoto-s-300-i-coca-cola-the-voice-happy-energy-tour-2023/41908">ТУК</a>.
                         </p>
+                        <a href="#" class="starred">&nbsp;</a>
                         <a href="#" class="like">0</a>
                     </div>
                 </article>
@@ -145,6 +147,7 @@
                             месеца, а
                             картите са активни от 1-во число на следващия месец.
                         </p>
+                        <a href="#" class="star">&nbsp;</a>
                         <a href="#" class="like">300</a>
                     </div>
                 </article>
