--- a/d1/index.html
+++ b/d1/index.html
@@ -22,7 +22,8 @@
     <link rel="stylesheet" href="../layout.css" />
     <link rel="stylesheet" href="select.css" />
     <link rel="stylesheet" href="custom.css" />
-    <title>Дизайн 1</title>
+    <title>Документи · Обучения · Дизайн 1</title>
+
 </head>
 
 <body>
@@ -32,7 +33,7 @@
         <nav class="nav" role="navigation">
             <ul>
                 <li>
-                    <a href="#" aria-haspopup="true">
+                    <a href="#" aria-haspopup="true" class="selected">
                         <span class="lnr lnr-graduation-hat"></span>
                         <span>Обучения</span>
                     </a>
@@ -40,7 +41,7 @@
                         <a href="#">Текущи</a>
                         <a href="#">Резултати</a>
                         <a href="#">Библиотека</a>
-                        <a href="#">Документи</a>
+                        <a href="#" class="selected">Документи</a>
                     </div>
                 </li>
                 <li>
@@ -120,7 +121,7 @@
         <section class="card primary" id="filter">
             <div>
                 <div class="select">
-                    <select>
+                    <select id="filterCategory">
                         <option>Всички</option>
                         <optgroup label="Правилници">
                             <option>Вътрешни правила</option>
@@ -137,11 +138,11 @@
 
         <section class="card default" id="docs">
             <header>
-                <h1>Документи</h1>
+                <h1>Документи <a href="#" class="badge">създай нов документ</a></h1>
                 <span class="lnr lnr-book"></span>
             </header>
             <div class="scroll">
-                <ul class="unstyled">
+                <ul class="unstyled" id="list">
                     <li>
                         <a href="#">Вътрешни правила за организацията на работната заплата в Нова Броудкастинг
                             Груп</a><br />
@@ -164,7 +165,6 @@
                 <a href="#"><span class="lnr lnr-chevron-right-circle"></span></a>
             </div>
         </section>
-
     </main>
 
     <footer class="apart primary" id="footer">
@@ -176,6 +176,84 @@
             © Copyright 2023 Gravital, All Rights Reserved.
         </small>
     </footer>
+
+    <script>
+        const docs = [
+            { category: 'Правилници', title: 'Вътрешни правила за организацията на работната заплата в Нова Броудкастинг Груп' },
+            { category: 'Правилници', title: 'Политика за чисто бюро' },
+            { category: 'Процедури', title: 'Процедура за вътрешен подбор - Нова' },
+            { category: 'Процедури', title: 'Процедура за провеждане на менторска програма' },
+            { category: 'Бланки', title: 'Бланка за прекратяване на трудов договор по взаимно съгласие' },
+            { category: 'Бланки', title: 'Бланка за прекратяване на трудов договор с предизвестие' },
+            { category: 'Бланки', title: 'Молба за смяна на банкова сметка' },
+            { category: 'Придобивки', subcategory: 'Други', title: 'Coolfit' },
+            { category: 'Придобивки', subcategory: 'Други', title: 'Green Deli Vending' },
+            { category: 'Придобивки', subcategory: 'Допълнително здравно осигуряване', title: 'Допълнително здравно осигуряване - Инструкции (NOVA)' },
+            { category: 'Придобивки', subcategory: 'Допълнително здравно осигуряване', title: 'Допълнително здравно осигуряване - Искане за плащане' },
+            { category: 'Придобивки', subcategory: 'Допълнително здравно осигуряване', title: 'Допълнително здравно осигуряване - Моето здравно досие' },
+            { category: 'Придобивки', subcategory: 'Допълнително здравно осигуряване', title: 'Допълнително здравно осигуряване - Молба за добавяне член семейство' },
+            { category: 'Придобивки', subcategory: 'Допълнително здравно осигуряване', title: 'Допълнително здравно осигуряване - Общи условия' },
+            { category: 'Придобивки', subcategory: 'Допълнително здравно осигуряване', title: 'Допълнително здравно осигуряване - Покрити разходи' },
+            { category: 'Придобивки', subcategory: 'Допълнително здравно осигуряване', title: 'Допълнително здравно осигуряване - Списък на лечебни заведения' },
+            { category: 'Придобивки', subcategory: 'Банкови оферти', title: 'ДСК - Оферта лизинг на автомобил' },
+            { category: 'Придобивки', subcategory: 'Банкови оферти', title: 'ДСК - Оферта от банка' },
+            { category: 'Придобивки', subcategory: 'Банкови оферти', title: 'ДСК - Оферта стоков кредит' },
+            { category: 'Придобивки', subcategory: 'Застраховки', title: 'Застраховка Злополука' },
+            { category: 'Придобивки', subcategory: 'Застраховки', title: 'Застраховка Злополука - Инструкции' },
+            { category: 'Придобивки', subcategory: 'Застраховки', title: 'Застраховка Злополука - Искане за плащане' },
+            { category: 'Придобивки', subcategory: 'Застраховки', title: 'Застраховка Злополука - Общи условия' },
+            { category: 'Придобивки', subcategory: 'Застраховки', title: 'Застраховка Злополука - Специални условия' },
+            { category: 'Придобивки', subcategory: 'Други', title: 'Мултиспорт - Декларация за деца' },
+            { category: 'Придобивки', subcategory: 'Други', title: 'Мултиспорт - Молба за издаване на карта' },
+            { category: 'Придобивки', subcategory: 'Други', title: 'Оферта за служители - Коли под наем' },
+            { category: 'Придобивки', subcategory: 'Други', title: 'Оферта за служители - Студио "Театрална шапка"' },
+            { category: 'Придобивки', subcategory: 'Други', title: 'Разписание за служебен транспорт' },
+            { category: 'Придобивки', subcategory: 'Банкови оферти', title: 'УниКредит Булбанк - оферта за младежи' },
+            { category: 'Придобивки', subcategory: 'Банкови оферти', title: 'УниКредит Булбанк - оферта от банка' },
+        ];
+
+        const categoryFilter = document.getElementById('filterCategory');
+        const searchFilter = document.getElementById('search');
+
+        categoryFilter.innerHTML = '<option value="">Всички</option>' + Object.entries(docs.reduce((acc, e) => {
+            const _set = (acc[e.category] || (acc[e.category] = new Set()))
+            if (e.subcategory) _set.add(e.subcategory);
+            return acc;
+        }, {})).map(([cat, sub]) => {
+            const opts = [...sub].map(e => `<option value="${cat}\t${e}">${e}</option>`);
+            return sub.size == 0
+                ? `<option>${cat}</option>`
+                : `<optgroup label="${cat}"><option value="${cat}\t">Всички</option>${opts}</optgroup>`;
+        }).join('');
+
+        const matches = (e) => {
+            const [cat, sub] = categoryFilter.value.split('\t');
+            const txt = searchFilter.value.toLowerCase();
+
+            if (cat && e.category != cat) return false;
+            if (sub && e.subcategory != sub) return false;
+            if (txt && !e.title.toLowerCase().includes(txt)) return false;
+            return true;
+        }
+
+        const doFilter = () => {
+            document.getElementById('list').innerHTML = docs.filter(matches)
+                .map(e => `<li><a href="">${e.title}</a></li>`)
+                .join('');
+        }
+
+        let timer;
+        searchFilter.addEventListener('input', () => {
+            clearTimeout(timer);
+            timer = setTimeout(doFilter, 300);
+        });
+        categoryFilter.addEventListener('change', doFilter);
+
+        doFilter();
+
+
+    </script>
+
 
 </body>
 
